# Taller-1-Estructuras

./: CMakeLists.txt  Sistema.cpp  Sistema.h  main.cpp  usuarios.csv  vehiculos.csv
managers/: ListaUsuarios.cpp  ListaUsuarios.h  ListaVehiculos.cpp  ListaVehiculos.h  ManejadorUsuarios.cpp  ManejadorUsuarios.h  ManejadorVehiculos.cpp  ManejadorVehiculos.h  NodoVehiculo.cpp  NodoVehiculo.h
model/: Usuario.cpp  Usuario.h  Vehiculo.cpp  Vehiculo.h
